# rhai_bytecode_experiment

./: Cargo.toml  README.md
apps/rhai_bytecode_test/: Cargo.toml
apps/rhai_bytecode_test/src/: main.rs  sample.rs
crates/rhai_bytecode/: Cargo.toml
crates/rhai_bytecode/src/: lib.rs
scripts/: prime.rhai  speed_test.rhai
