[package]
name = "rhai_bytecode_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {version="1"}
serde = { version = "1", features = ["derive"] }
serde_json = {version="1"}
flate2 = { version="1" }
rhai_bytecode = { path = "../../crates/rhai_bytecode" }

[profile.release]
strip = true