[package]
name = "rhai_bytecode"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = {version="1"}
serde = { version = "1", features = ["derive"] }
rhai={version="1.2",features=["sync","no_object","no_time","no_function","no_module","no_custom_syntax","no_position","internals","unicode-xid-ident","serde"]}

[features]
default = ["size32"]
size16=[]
size32=[]
size64=[]
