[package]
name = "rhai_bytecode"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = {version="1"}
serde = { version = "1", features = ["derive"] }
rhai={version="1.2",features=["internals"]}
thin-vec = { version = "0.2", default-features = false, optional = true }

[features]
default = ["size32","no_object","no_time","no_function","no_module","no_custom_syntax","no_position"]
thin-vec = ["dep:thin-vec","thin-vec/serde"]
no_object = ["rhai/no_object"]
no_time = ["rhai/no_time"]
no_function = ["rhai/no_function"]
no_module = ["rhai/no_module"]
no_custom_syntax = ["rhai/no_custom_syntax"]
no_position = ["rhai/no_position"]
unicode-xid-ident=["rhai/unicode-xid-ident"]
sync = ["rhai/sync"]
serde = ["rhai/serde"]
f32_float = ["rhai/f32_float"]
only_i32 = ["rhai/only_i32"]
only_i64 = ["rhai/only_i64"]
size16=[]
size32=[]
size64=[]
